[gd_scene load_steps=7 format=3 uid="uid://cfanhndu8s42x"]

[ext_resource type="PackedScene" uid="uid://dgawyqtic4fkm" path="res://assets/glb/Skeleton_Warrior.glb" id="1_m755o"]
[ext_resource type="PackedScene" uid="uid://jwugnrdfc8l2" path="res://assets/glb/Skeleton_Blade.fbx" id="2_0hb7b"]
[ext_resource type="PackedScene" uid="uid://mpwlowo34n2l" path="res://assets/glb/Skeleton_Axe.fbx" id="2_keybn"]
[ext_resource type="Script" uid="uid://cfwlfbo5i7px1" path="res://characters/monsters/skeleton_warrior.gd" id="2_qjr81"]
[ext_resource type="PackedScene" uid="uid://c4782k54tf7ua" path="res://assets/glb/Skeleton_Shield_Small_A.fbx" id="4_qjr81"]
[ext_resource type="PackedScene" uid="uid://byq6tdfvjvnfn" path="res://assets/glb/Skeleton_Shield_Large_A.fbx" id="5_4d08d"]

[node name="Skeleton_Warrior" instance=ExtResource("1_m755o")]
script = ExtResource("2_qjr81")

[node name="Skeleton3D" parent="Rig" index="0"]
bones/1/position = Vector3(0, 0.392064, 0)
bones/1/rotation = Quaternion(-1.11123e-10, 0.0431578, 2.57241e-09, 0.999068)
bones/2/rotation = Quaternion(-6.93889e-18, 7.10543e-15, 4.93038e-32, 1)
bones/3/rotation = Quaternion(0.0463983, 1.10715e-08, 0.00401613, 0.998915)
bones/3/scale = Vector3(1, 1, 1)
bones/4/rotation = Quaternion(-0.554674, -0.198443, -0.734736, 0.336335)
bones/4/scale = Vector3(0.999999, 0.999999, 1)
bones/5/rotation = Quaternion(4.74613e-08, -4.93776e-08, -0.299136, 0.954211)
bones/5/scale = Vector3(1, 1, 1)
bones/6/rotation = Quaternion(-1.22206e-10, 6.32551e-10, 0.0266581, 0.999645)
bones/6/scale = Vector3(1, 1, 1)
bones/7/rotation = Quaternion(-0.227256, -0.251342, -0.140459, 0.930297)
bones/7/scale = Vector3(1, 1, 1)
bones/8/position = Vector3(8.34829e-10, 0.0961251, -0.0575001)
bones/8/rotation = Quaternion(-0.0252592, -0.000613541, -0.500762, 0.865216)
bones/8/scale = Vector3(1, 1, 1)
bones/9/position = Vector3(-0.212007, 0.134132, 7.65863e-08)
bones/9/rotation = Quaternion(-0.626237, 0.128879, 0.67894, 0.360913)
bones/9/scale = Vector3(0.999999, 0.999999, 1)
bones/10/rotation = Quaternion(3.21317e-08, 5.51345e-08, 0.305242, 0.952275)
bones/10/scale = Vector3(1, 1, 1)
bones/11/rotation = Quaternion(-3.00939e-08, -6.58777e-09, -0.0266581, 0.999645)
bones/11/scale = Vector3(1, 1, 1)
bones/12/rotation = Quaternion(-0.166099, 0.239085, -0.071525, 0.954009)
bones/12/scale = Vector3(1, 1, 1)
bones/13/position = Vector3(-8.34822e-10, 0.0961251, -0.0575)
bones/13/rotation = Quaternion(-6.95172e-10, -3.91464e-09, 0.707107, 0.707107)
bones/13/scale = Vector3(1, 1, 1)
bones/14/rotation = Quaternion(0.0672266, -0.0439186, 0.047026, 0.995661)
bones/16/position = Vector3(0.170945, 0.113587, 1.59941e-08)
bones/16/rotation = Quaternion(0.993715, 0.0837146, 0.0735038, 0.0109185)
bones/16/scale = Vector3(1, 1, 1)
bones/17/rotation = Quaternion(0.195602, 6.26228e-08, -1.32239e-07, 0.980683)
bones/17/scale = Vector3(1, 1, 1)
bones/18/rotation = Quaternion(-0.517564, -0.209497, 0.0436549, 0.828452)
bones/18/scale = Vector3(1, 1, 0.999999)
bones/19/rotation = Quaternion(0.000111784, 0.920258, -0.391313, -2.52417e-05)
bones/19/scale = Vector3(1, 0.999998, 1)
bones/20/position = Vector3(-0.170945, 0.113587, 1.55755e-08)
bones/20/rotation = Quaternion(0.997322, -0.0294574, 0.0315293, 0.0590483)
bones/20/scale = Vector3(1, 1, 1)
bones/21/rotation = Quaternion(0.274008, -6.38135e-08, 1.92761e-07, 0.961727)
bones/21/scale = Vector3(1, 1, 1)
bones/22/rotation = Quaternion(-0.559039, 0.114513, -0.00862763, 0.82115)
bones/22/scale = Vector3(1, 1, 0.999999)
bones/23/rotation = Quaternion(-8.93489e-05, 0.920222, -0.391398, 2.0291e-05)
bones/23/scale = Vector3(1, 0.999998, 1)
bones/24/rotation = Quaternion(0.707107, -2.29302e-07, -4.60552e-08, 0.707107)
bones/25/position = Vector3(0.202182, 0.0259903, 0.205181)
bones/25/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/26/rotation = Quaternion(9.65792e-09, 1.77955e-09, 0.985719, -0.168398)
bones/27/position = Vector3(-2.60494e-08, 0.213436, -5.1715e-09)
bones/27/rotation = Quaternion(-1.01273e-07, 0.391084, 0.920355, -3.35091e-08)
bones/27/scale = Vector3(1, 1, 1)
bones/28/position = Vector3(8.58988e-09, 0.16565, -2.40963e-09)
bones/28/scale = Vector3(1, 1, 1)
bones/29/rotation = Quaternion(1, -2.33136e-09, 1.99777e-07, -1.34211e-15)
bones/29/scale = Vector3(1, 1, 1)
bones/30/rotation = Quaternion(4.16335e-17, -6.74098e-17, -1.94669e-08, 1)
bones/31/rotation = Quaternion(0.707107, -3.82385e-08, 1.45009e-07, 0.707107)
bones/32/rotation = Quaternion(-0.707107, -7.05285e-08, -7.05285e-08, 0.707107)
bones/33/rotation = Quaternion(-5.83589e-09, 6.43837e-10, 0.994809, 0.101756)
bones/34/position = Vector3(-1.11482e-08, 0.213436, -2.50942e-15)
bones/34/rotation = Quaternion(-1.05796e-07, 0.391084, 0.920355, -2.58643e-08)
bones/34/scale = Vector3(1, 1, 1)
bones/35/position = Vector3(-6.31128e-09, 0.16565, 2.70695e-09)
bones/35/rotation = Quaternion(-0.391084, -6.73931e-08, -6.22002e-08, 0.920355)
bones/35/scale = Vector3(1, 1, 1)
bones/36/rotation = Quaternion(1, 3.76526e-09, 1.94879e-07, 7.45058e-09)
bones/36/scale = Vector3(1, 1, 1)
bones/37/rotation = Quaternion(1.00614e-16, -6.74098e-17, -1.57416e-08, 1)
bones/37/scale = Vector3(1, 1, 1)
bones/38/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/39/position = Vector3(0.520841, 0.731451, 0.037993)
bones/39/rotation = Quaternion(0.664474, 0.21105, 0.70056, 0.152145)
bones/39/scale = Vector3(1, 1, 1)
bones/40/rotation = Quaternion(-0.707107, -7.27951e-08, -7.27951e-08, 0.707107)
bones/41/position = Vector3(-0.510844, 0.718528, 0.0390601)
bones/41/rotation = Quaternion(-0.736771, 0.128002, 0.660683, 0.0654368)

[node name="Skeleton_Warrior_Helmet" parent="Rig/Skeleton3D" index="0"]
transform = Transform3D(0.996112, -0.0879899, 0.00429233, 0.0866225, 0.969434, -0.229553, 0.0160372, 0.229033, 0.973287, 0.00224838, 1.20189, 0.019157)

[node name="RightHand" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="10"]
transform = Transform3D(-0.275082, -0.0942274, -0.956792, -0.958666, 0.10215, 0.265562, 0.0727133, 0.990295, -0.118432, -0.522728, 0.552124, 0.0711895)
bone_name = "handslot.r"
bone_idx = 13

[node name="Blade" parent="Rig/Skeleton3D/RightHand" index="0" instance=ExtResource("2_0hb7b")]
transform = Transform3D(-0.999771, 0.00102706, -0.0213779, -0.00102705, 0.995395, 0.0958533, 0.0213779, 0.0958532, -0.995166, 0, 0, 0)

[node name="Axe" parent="Rig/Skeleton3D/RightHand" index="1" instance=ExtResource("2_keybn")]
transform = Transform3D(0.99912, 0.00394607, 0.0417588, 0.00394599, 0.982307, -0.187237, -0.0417588, 0.187237, 0.981427, 0, 0, 0)
visible = false

[node name="BoneAttachment3D" type="BoneAttachment3D" parent="Rig/Skeleton3D" index="11"]
transform = Transform3D(-0.0673004, -0.0706514, 0.995228, 0.997731, -0.00613867, 0.0670347, 0.00137362, 0.997481, 0.0709048, 0.511369, 0.586283, 0.107365)
bone_name = "handslot.l"
bone_idx = 8

[node name="Skeleton_Shield_Small_A" parent="Rig/Skeleton3D/BoneAttachment3D" index="0" instance=ExtResource("4_qjr81")]

[node name="Skeleton_Shield_Large_A" parent="Rig/Skeleton3D/BoneAttachment3D" index="1" instance=ExtResource("5_4d08d")]
visible = false
